# rust-actix-books-app

./: Cargo.toml  dev.sh  readme.md  watch.sh
.docker/: Dockerfile  docker-compose.yml
src/: db.rs  env.rs  extractors.rs  main.rs  types.rs
src/controllers/: books_controller.rs  mod.rs
src/models/: book_model.rs  mod.rs
